Bug 290195 - Yahoo account control automatically truncates @ymail.com, @rocketmail.com, or other yahoo extensions causing inability to connect
Summary: Yahoo account control automatically truncates @ymail.com, @rocketmail.com, or...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: openSUSE Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-30 17:43 UTC by lukewolf101010
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lukewolf101010 2011-12-30 17:43:13 UTC
Version:           git-latest (using KDE 4.7.2) 
OS:                Linux

I had set up my yahoo accounts in kde-telepathy around the time of the release of kde-telepathy 0.2, I didn't touch the kcm module for account management up until recently, editing one of my ymail (yahoo) accounts out of curiosity to see what had changed.  Much to my chagrin it's now automatically cutting off the @ymail extension, and I imagine all other non-@yahoo.com extensions thus causing it to be not able to connect, I looked over the bug tracker and this commit http://commits.kde.org/telepathy-accounts-kcm/6f9835a0ae589c9065b431b69b3e5961ac5a6dd0 seems to be the cause.  I would imagine that a check for just what extension the person puts on the end of the address would fix the problem

Reproducible: Always

Steps to Reproduce:
System Settings -> Instant Messaging and Voip -> add or edit a yahoo account -> try to add in an account with a non-@yahoo.com extension such as @ymail.com

Actual Results:  
Truncates off @ymail.com thus causing connection to the account to fail

Expected Results:  
not cutting off @ymail.com thus allowing the connection to proceed
Comment 1 Martin Klapetek 2012-01-01 01:22:50 UTC
I can confirm - Yahoo! has two more domains, which are not the same as internationalized yahoo domains (ie. yahoo.it, yahoo.de etc are pretty much the same mailbox). 

This commit is not really to blame as before it the check was done as well and you wouldn't be able to add an account with @anything anyway; that commit just made it automatic.

Question is, if haze actually supports these Yahoo! domains as right now it requires one to send account name without the domain part. Can anyone from upstream Telepathy please comment here?
Comment 2 Martin Klapetek 2012-01-09 17:19:39 UTC
Git commit 725de5fb2a96949d75913a0be84c05e048b42735 by Martin Klapetek.
Committed on 09/01/2012 at 18:03.
Pushed by mklapetek into branch 'master'.

Cut off only '@yahoo.*' from account name.

Haze won't connect if the @yahoo.* part is left in the account name, but it works for @ymail.com and @rocketmail.com.

Reviewed-by: Daniele E. Domenichelli

M  +3    -1    plugins/haze/yahoo-main-options-widget.cpp

http://commits.kde.org/telepathy-accounts-kcm/725de5fb2a96949d75913a0be84c05e048b42735