Cut off only '@yahoo.*' from account name.

Haze won't connect if the @yahoo.* part is left in the account name, but it works for @ymail.com and @rocketmail.com.

Reviewed-by: Daniele E. Domenichelli
BUG: 290195